Add Login details menu.

--- a/ADOT4J4A/res/layout/title_list.xml
+++ b/ADOT4J4A/res/layout/title_list.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <fragment
-        android:id="@+id/titles"
+    <include layout="@layout/title_bar" />
+
+    <ListView
+        android:id="@+id/title_list"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        class="com.gsbina.android.adot4j4a.MainActivity$TitlesFragment" />
+        android:layout_weight="1" />
 
 </LinearLayout>
