--- a/ADOT4J4A/res/layout-land/main.xml
+++ b/ADOT4J4A/res/layout-land/main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2010 The Android Open Source Project
+<!--
+     Copyright (C) 2010 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,20 +15,27 @@
      limitations under the License.
 -->
 
-<!-- Top-level content view for the layout fragment sample.  This version is
-     for display when in landscape: we can fit both titles and dialog. -->
-
+<!--
+     Top-level content view for the layout fragment sample.  This version is
+     for display when in landscape: we can fit both titles and dialog.
+-->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal" >
 
-    <fragment class="com.gsbina.android.adot4j4a.MainActivity$TitlesFragment"
-            android:id="@+id/titles" android:layout_weight="1"
-            android:layout_width="0px" android:layout_height="match_parent" />
+    <fragment
+        android:id="@+id/titles"
+        android:layout_width="0px"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        class="com.gsbina.android.adot4j4a.MainActivity$TitlesFragment" />
 
-    <FrameLayout android:id="@+id/details" android:layout_weight="3"
-            android:layout_width="0px" android:layout_height="match_parent" />
+    <FrameLayout
+        android:id="@+id/details"
+        android:layout_width="0px"
+        android:layout_height="match_parent"
+        android:layout_weight="3" />
 
 </LinearLayout>
-
