--- a/ADOT4J4A/res/values-ja/arrays.xml
+++ b/ADOT4J4A/res/values-ja/arrays.xml
@@ -14,5 +14,21 @@
         <item>地理</item>
         <item>その他</item>
     </string-array>
+    <string-array name="titles_login">
+        <item>WebViewでログイン</item>
+        <item>ブラウザでログイン</item>
+        <item>PINコードでログイン</item>
+    </string-array>
+    <string-array name="titles_timeline">
+        <item>パブリック</item>
+        <item>ホーム</item>
+        <item>ユーザ</item>
+        <item>メンション</item>
+        <item>ユーザのリツイート</item>
+        <item>フレンドのリツイート</item>
+        <item>リツイートされたツイート</item>
+        <item>指定ユーザのフレンドのリツイート</item>
+        <item>指定ユーザのリツイート</item>
+    </string-array>
 
 </resources>
