--- a/ADOT4J4A/res/values/arrays.xml
+++ b/ADOT4J4A/res/values/arrays.xml
@@ -14,5 +14,21 @@
         <item>Geo</item>
         <item>Other</item>
     </string-array>
+    <string-array name="titles_login">
+        <item>From WebView</item>
+        <item>From Browser</item>
+        <item>From PIN Code</item>
+    </string-array>
+    <string-array name="titles_timeline">
+        <item>Public</item>
+        <item>Home</item>
+        <item>User</item>
+        <item>Mentions</item>
+        <item>Retweet By Me</item>
+        <item>Retweet To Me</item>
+        <item>Retweet Of Me</item>
+        <item>Retweet To User</item>
+        <item>Retweet By User</item>
+    </string-array>
 
 </resources>
