--- a/ADOT4J4A/res/values/arrays.xml
+++ b/ADOT4J4A/res/values/arrays.xml
@@ -16,8 +16,8 @@
     </string-array>
     <string-array name="titles_login">
         <item>From WebView</item>
-        <item>From Browser</item>
-        <item>From PIN Code</item>
+        <!-- <item>From Browser</item>
+        <item>From PIN Code</item> -->
     </string-array>
     <string-array name="titles_timeline">
         <item>Public</item>
